Fixed salesman team x color association

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <div id="Container" class="container">
       <div id="salesman1" class="mix category-1" data-sold="5800"><span class="name">Vendedora 1 (Equipe A)</span><span class="value">R$ 2.000,00</span><span class="plus">+ R$ 2.000,00</span></div>
       <div id="salesman2" class="mix category-1" data-sold="5700"><span class="name">Vendedora 2 (Equipe A)</span><span class="value">R$ 3.000,00</span><span class="plus">+ R$ 3.000,00</span></div>
-      <div id="salesman3" class="mix category-2" data-sold="5600"><span class="name">Vendedora 3 (Equipe A)</span><span class="value">R$ 6.000,00</span><span class="plus">+ R$ 6.000,00</span></div>
+      <div id="salesman3" class="mix category-2" data-sold="5600"><span class="name">Vendedora 3 (Equipe B)</span><span class="value">R$ 6.000,00</span><span class="plus">+ R$ 6.000,00</span></div>
       <div id="salesman4" class="mix category-2" data-sold="5500"><span class="name">Vendedora 4 (Equipe B)</span><span class="value">R$ 8.000,00</span><span class="plus">+ R$ 8.000,00</span></div>
-      <div id="salesman5" class="mix category-3" data-sold="5400"><span class="name">Vendedora 5 (Equipe A)</span><span class="value">R$ 5.000,00</span><span class="plus">+ R$ 5.000,00</span></div>
-      <div id="salesman6" class="mix category-3" data-sold="5300"><span class="name">Vendedora 6 (Equipe A)</span><span class="value">R$ 1.000,00</span><span class="plus">+ R$ 1.000,00</span></div>
-      <div id="salesman7" class="mix category-4" data-sold="5200"><span class="name">Vendedora 7 (Equipe B)</span><span class="value">R$ 7.000,00</span><span class="plus">+ R$ 7.000,00</span></div>
-      <div id="salesman8" class="mix category-4" data-sold="5100"><span class="name">Vendedora 8 (Equipe B)</span><span class="value">R$ 4.000,00</span><span class="plus">+ R$ 4.000,00</span></div>
+      <div id="salesman5" class="mix category-3" data-sold="5400"><span class="name">Vendedora 5 (Equipe C)</span><span class="value">R$ 5.000,00</span><span class="plus">+ R$ 5.000,00</span></div>
+      <div id="salesman6" class="mix category-3" data-sold="5300"><span class="name">Vendedora 6 (Equipe C)</span><span class="value">R$ 1.000,00</span><span class="plus">+ R$ 1.000,00</span></div>
+      <div id="salesman7" class="mix category-4" data-sold="5200"><span class="name">Vendedora 7 (Equipe D)</span><span class="value">R$ 7.000,00</span><span class="plus">+ R$ 7.000,00</span></div>
+      <div id="salesman8" class="mix category-4" data-sold="5100"><span class="name">Vendedora 8 (Equipe D)</span><span class="value">R$ 4.000,00</span><span class="plus">+ R$ 4.000,00</span></div>
     </div>
 
     <script type="text/javascript">
