Added button to go full screen

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <script src="http://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js?v=2.1.9"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <div class="header">Vendas %DATE% (Simula&ccedil;&atilde;o)</div>
+    <div class="header">Vendas %DATE% (Simula&ccedil;&atilde;o)
+      <button style="float: right;" class="active" onclick="toggleFullScreen()">Tela cheia</button>
+    </div>
     <div class="controls">
       <label>Filtro:</label>
       
