Fixed bottom gutters

--- a/index_new2.html
+++ b/index_new2.html
@@ -52,6 +52,7 @@ body{ background: #EFEFEF; }
   border-radius: 0px;
   border: 0;
   overflow: hidden;
+  margin-bottom: 0px;
 }
 .card > .title{
   font-weight:bold;
