--- a/index_new2.html
+++ b/index_new2.html
@@ -39,7 +39,7 @@ body{ background: #EFEFEF; }
 .card-container {
   padding: 5px 5px;
   display: table-cell;
-  height: 40%;
+  height: 50%;
 }
 .card-container-sm {
   height: 50%;
@@ -83,11 +83,9 @@ body{ background: #EFEFEF; }
   padding-bottom: 5px;
   padding-top: 0px;
 }
-progress.progress{
-  margin-bottom: 0;
+.progress {
+    margin-bottom: 0;
 }
-
-
   </style>
 </head>
 <body>
